Add VNC Proxy implementation via WebSocket proxy
A new handling mechanism for VNC protocol is added through VNCHandler and VNCSession classes, which include related functionalities like getting and setting sockets and VNC sessions. Additionally, a WebSocket proxy has been implemented to properly handle connections via browsers, which don't support pure TCP. It also includes the provision of a security filter chain specific for the "/novnc/**" path. Minor changes include updates to the UI, menu, and added localization support.

--- a/jmix-vnc/src/main/resources/de/bytestore/jmixvnc/messages.properties
+++ b/jmix-vnc/src/main/resources/de/bytestore/jmixvnc/messages.properties
@@ -1,3 +1,12 @@
 localeDisplayName.en=English
 
-de.bytestore.jmixvnc/menu.addon=Jmix-vnc
+de.bytestore.jmixvnc.entity/VNCSession=VNC sessions
+de.bytestore.jmixvnc.entity/VNCSession.createdBy=Created by
+de.bytestore.jmixvnc.entity/VNCSession.createdDate=Created date
+de.bytestore.jmixvnc.entity/VNCSession.hostname=Hostname
+de.bytestore.jmixvnc.entity/VNCSession.id=Id
+de.bytestore.jmixvnc.entity/VNCSession.port=Port
+
+de.bytestore.jmixvnc.view.vncsession/VNCSessionListView.title=VNC sessions
+
+de.bytestore.jmixvnc/menu.addon=JMIX-vnc
